1999-11-21  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* utils.cc (Vtreat_neg_dim_as_zero): Texinfoize doc string.
	* DLD-FUNCTIONS/find.cc (Ffind): Ditto.
	* DLD-FUNCTIONS/rand.cc (Frand, Frandn): Ditto.
	* DLD-FUNCTIONS/sort.cc (Fsort): Ditto.
	* mappers.cc (Fisinf, Fisnan, Ffinite): Ditto.
	* data.cc (Fall, Fany, Fdiag, Fones, Fzeros, Feye, Flinspace): Ditto.

1999-11-20  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* DLD-FUNCTIONS/fft.cc (Ffft): Texinfoize doc string.
	* DLD-FUNCTIONS/ifft.cc (Fifft): Ditto.
	* DLD-FUNCTIONS/fft2.cc (Ffft2): Ditto.
	* DLD-FUNCTIONS/ifft2.cc (Fifft2): Ditto.
	* DLD-FUNCTIONS/filter.cc (Ffilter): Ditto.
	* DLD-FUNCTIONS/quad.cc (Fquad, Fquad_options): Ditto.
	* DLD-FUNCTIONS/colloc.cc (Fcolloc): Ditto.
	* DLD-FUNCTIONS/fsolve.cc (Ffsolve, Ffsolve_options): Ditto.
	* defaults.cc (Veditor): Ditto.
	* pt-plot.cc (Vautomatic_replot, Vgnuplot_binary,
	Vgnuplot_has_frames, Vgnuplot_has_multiplot, Fclearplot,
	Fcloseplot, Fpurge_tmp_files, Fishold, Fhold): 

	* Makefile.in (parse.cc): Expect 11 shift/reduce conflicts now.

1999-11-19  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* parse.y (Vwarn_assign_as_truth_value,	Vwarn_variable_switch_label):
	Texinfoize doc strings.

	* DLD-FUNCTIONS/pinv.cc (Fpinv): Texinfoize doc string.

	* defun-int.h (DEFUN_DLD_INTERNAL): New macro.
	* defun-dld.h [MAKE_BUILTINS] (DEFUN_DLD): Simply expand to
	DEFUN_DLD_INTERNAL.
	* mkbuiltins: Generate code to define DEFUN_DLD_INTERNAL.
	* mkgendoc: Likewise.

	* Makefile.in (gendoc.o): Don't optimize when creating gendoc.
	(%.dc : %.cc): Delete rule.

	* pt-decl.cc (Vdefault_global_variable_value): Texinofize doc string.
	* variables.cc (Fclear, Fdocument, Fexist, Fis_global, Fwho): Ditto.
	* help.cc (Ftype, Fwhich): Ditto.
	* ov.cc (Vstruct_levels_to_print, Vimplicit_str_to_num_ok): Ditto.
	* data.cc (Fis_struct, Fstruct_elements, Fstruct_constains): Ditto.
	* strfns.cc (Fisstr, Fsetstr): Ditto.
	* pt-mat.cc: (Fimplicit_num_to_str_ok, Fstring_fill_char): Ditto.